--- a/index.html
+++ b/index.html
@@ -2,23 +2,21 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-<title>Willkommen!</title>
+<title>Das ist meine erste Webseite</title>
 </head>
 <body>
 <header>
-	<h1>Willkommen!</h1>
+	<h1>Das ist meine erste Webseite</h1>
 </header>
 <article>
 	<p>
-		Diese Seite wird von Ihrem eigenen Webserver auf Ihrem eigenen Rechner unter der Top-Level-Domain
-		<a href="http://localhost">localhost</a> ausgeliefert.
+		Hallo. Mein Name ist David Cortes Mateos und diese ist meine erste Aufgabe.
 	</p>
 	<p>
-		Sie werden hier Ihre Website erstellen, auf der Sie auch ohne Internetzugang surfen können.
-		Erst wenn Sie mit Ihrer Arbeit zufrieden sind, geht's in die Cloud.
+		Vielen Dank.
 	</p>
 	<p>
-		Ihr Kursteam
+		David Cortes Mateos
 	</p>
 </article>
 </body>
